Committing work in progress: Support for Boogie; start of refactoring handling of external processes; base classes for basic blocking; moving tests to JUnit4
git-svn-id: file:///home/jls/openjml/repo_master/OpenJML/trunk/OpenJML@2654 1627bae4-3225-46cb-a19f-684862636fd9